hardcodeddata working now.

--- a/Views/Home/Books.cshtml
+++ b/Views/Home/Books.cshtml
@@ -5,7 +5,9 @@
 @model phonemvc.Books
 <ul>
     @foreach(var book in Model.books){
-		<li>@book.title</li>
+       
+		<li>@book.title ->>>>>> @book.author ----@book.price</li>
+        
 	}
 </ul>
 
